# Drill-Spark

./: .gitignore  README.md
Client/: Cargo.toml
Client/.cargo/: config.toml
Client/src/: board_plugin.rs  build_menu_plugin.rs  buildings.rs  input_handling.rs  main.rs  rendering.rs  resources.rs  revealing.rs  settings.rs
Client/src/rendering/: resource_display.rs  reveal_status.rs  tile_visualization.rs
Common/: Cargo.toml
Common/src/: game_component.rs  lib.rs  resources.rs
Common/src/buildings/: blueprints.rs
Common/src/buildings/blueprints/: building_blueprint.rs  drill_depot_blueprint.rs  tower_blueprint.rs  warp_gate_blueprint.rs
Common/src/game_component/: buildings.rs  game_grid.rs  mine_tag.rs  ores.rs  position.rs  resources.rs  tile.rs
Common/src/network/: messages.rs
Common/src/resources/: resource_store.rs  transaction.rs
Server/: Cargo.toml
Server/src/: buildings.rs  host_world_plugin.rs  main.rs  mining.rs  networking.rs  player.rs  resources.rs  revealing.rs  settings.rs
Server/src/buildings/: building_process.rs
Server/src/mining/: mining_queue.rs  mining_scheduler.rs
Server/src/networking/: connection_id_lookup.rs  handle_connection_events.rs
