[package]
name = "drillspark_common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
serde = "1.0.137"
typetag = "0.1.8"
rand = "0.8.5"
nameof = "1.2.2"
xs_bevy_core_2d = { git = "https://github.com/CaptainOachkatzl/XSBevyCore2D" }
bevy_spicy_networking = { git = "https://github.com/CaptainOachkatzl/bevy_spicy_networking" }

[lib]
# crate-type = ["dylib"]